# new_admin_panel_sprint_3

./: .env  .gitignore  README.md  database_dump.sql  docker-compose.yaml  example.env  movies_admin.sql  pyproject.toml
app/backend_authorization/: admin.py  apps.py  backend.py  models.py
app/backend_authorization/migrations/: 0001_initial.py  0002_permission_role.py
app/config/: settings.py  urls.py
app/config/components/: database.py
app/movies_admin/: admin.py  apps.py  models.py  paginators.py  permisions.py  serializers.py  views.py
app/movies_admin/api/: urls.py
app/movies_admin/api/v1/: urls.py
app/movies_admin/locale/en/LC_MESSAGES/: django.po
app/movies_admin/locale/ru/LC_MESSAGES/: django.mo  django.po
app/movies_admin/migrations/: 0001_db_creation.py  0001_initial.py
docker/api/: Dockerfile  entrypoint.sh
docker/etl/: Dockerfile
docker/nginx/: Dockerfile
docker/nginx/conf.d/: default.conf
dump/: dump_es.py  dumped_data.json  redump_es.py
etl/: README.md  data_transform.py  db_extractions.py  elastic.py  elastic_extraction.py  main.py  settings.py  state.json  state.py
etl2/: config.py  db.py  state.py
